--- a/category.html
+++ b/category.html
@@ -706,7 +706,7 @@
                                         <div class="product-cat">
                                             <a href="#">Women</a>
                                         </div><!-- End .product-cat -->
-                                        <h3 class="product-title"><a href="product.html">Aliquam tincidunt mauris</a></h3><!-- End .product-title -->
+                                        <h3 class="product-title"><a href="product-detail.html">Aliquam tincidunt mauris</a></h3><!-- End .product-title -->
                                         <div class="product-price">
                                             <span class="new-price">$50.00</span>
                                             <span class="old-price">$84.00</span>
